syntax = "proto3";

option csharp_namespace = "YouRata.Common.Proto";

package conflict_monitor_message;

message MilestoneLog
{
    string Message = 1;
    string Milestone = 2;
}
