syntax = "proto3";

import "Proto/MilestoneLog.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "YouRata.Common.Proto";

package conflict_monitor_message;

service MilestoneLogService
{
    rpc WriteLogMessage (MilestoneLog) returns (google.protobuf.Empty);
}

